--- a/Prayers/Prayers/Views/MainView.xaml
+++ b/Prayers/Prayers/Views/MainView.xaml
@@ -2,29 +2,121 @@
 <ContentPage
     x:Class="Prayers.Views.MainView"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:converters="clr-namespace:Prayers.Converters"
+    xmlns:fontAwesome="clr-namespace:FontAwesome"
+    xmlns:magic="clr-namespace:MagicGradients;assembly=MagicGradients"
+    xmlns:sfBorder="clr-namespace:Syncfusion.XForms.Border;assembly=Syncfusion.Core.XForms"
+    xmlns:sfButtons="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
+    xmlns:syncEffectsView="clr-namespace:Syncfusion.XForms.EffectsView;assembly=Syncfusion.Core.XForms">
+    <!--
+        BackgroundImageSource="mainpic.jpg"
+        Opacity="0.5"
+    -->
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:StringToColorConverter x:Key="stringToColorConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout>
-            <Label
-                Margin="10"
-                FontAttributes="Bold"
-                FontSize="Large"
-                HorizontalOptions="CenterAndExpand"
-                HorizontalTextAlignment="Center"
-                Text="{Binding PrayerMainHeader01}"
-                VerticalOptions="CenterAndExpand" />
-            <Image
-                Margin="30,10,30,10"
-                Aspect="AspectFit"
-                Source="mainpic.jpg" />
-            <Label
-                Margin="10"
-                FontAttributes="Bold"
-                FontSize="Medium"
-                HorizontalOptions="CenterAndExpand"
-                HorizontalTextAlignment="Center"
-                Text="{Binding PrayerMainHeader02}"
-                VerticalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid>
+            <magic:GradientView GradientSource="{Binding DefaultStyle.DefaultMgPageBgSource}" VerticalOptions="FillAndExpand" />
+
+            <StackLayout>
+                <Label
+                    Margin="0"
+                    FontAttributes="Bold"
+                    FontSize="Large"
+                    HorizontalOptions="CenterAndExpand"
+                    HorizontalTextAlignment="Center"
+                    Text="{Binding PrayerMainHeader01}"
+                    TextColor="{Binding DefaultStyle.DefaultFontColor, Converter={StaticResource stringToColorConverter}}"
+                    VerticalOptions="CenterAndExpand" />
+                <sfBorder:SfBorder
+                    Margin="10"
+                    BorderColor="{Binding DefaultStyle.BoxBorderColor, Converter={StaticResource stringToColorConverter}}"
+                    BorderWidth="1"
+                    CornerRadius="0"
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="FillAndExpand">
+                    <Grid>
+                        <magic:GradientView GradientSource="{Binding DefaultStyle.BoxBgSource}" VerticalOptions="FillAndExpand" />
+                        <StackLayout VerticalOptions="Center">
+                            <Image
+                                Margin="30,10,30,10"
+                                Aspect="AspectFit"
+                                Source="mainpic.png" />
+                        </StackLayout>
+                    </Grid>
+                </sfBorder:SfBorder>
+                <Label
+                    Margin="0"
+                    FontAttributes="Bold"
+                    FontSize="Medium"
+                    HorizontalOptions="CenterAndExpand"
+                    HorizontalTextAlignment="Center"
+                    Text="{Binding PrayerMainHeader02}"
+                    TextColor="{Binding DefaultStyle.DefaultFontColor, Converter={StaticResource stringToColorConverter}}"
+                    VerticalOptions="CenterAndExpand" />
+                <Grid Margin="0,0,0,10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50*" />
+                        <ColumnDefinition Width="50*" />
+                        <ColumnDefinition Width="10" />
+                    </Grid.ColumnDefinitions>
+                    <syncEffectsView:SfEffectsView
+                        Grid.Column="1"
+                        AnimationCompleted="SfEffectsView_AnimationCompleted"
+                        BackgroundColor="{Binding DefaultStyle.ButtonBgColor, Converter={StaticResource stringToColorConverter}}"
+                        CornerRadius="10"
+                        FadeOutRipple="True"
+                        RippleAnimationDuration="500">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="50" />
+                            </Grid.ColumnDefinitions>
+                            <!--<Grid.RowDefinitions>
+                 <RowDefinition Height="30" />
+             </Grid.RowDefinitions>-->
+                            <Label
+                                Grid.Column="0"
+                                Margin="10,0,0,0"
+                                FontAttributes="Bold"
+                                FontSize="Medium"
+                                HorizontalOptions="Center"
+                                Text="Start"
+                                TextColor="{Binding DefaultStyle.ButtonFgColor, Converter={StaticResource stringToColorConverter}}"
+                                VerticalOptions="Center">
+                                <!--<Label.GestureRecognizers>
+                     <TapGestureRecognizer Tapped="SynonAntonBox_Tapped" />
+                 </Label.GestureRecognizers>-->
+                            </Label>
+
+                            <sfButtons:SfButton
+                                Grid.Column="1"
+                                BackgroundColor="{Binding DefaultStyle.ButtonBgColor, Converter={StaticResource stringToColorConverter}}"
+                                Command="{Binding playAudio}"
+                                CornerRadius="30"
+                                HeightRequest="30"
+                                VerticalOptions="Center"
+                                WidthRequest="30">
+                                <Image>
+                                    <Image.Source>
+                                        <FontImageSource
+                                            FontFamily="FontAwesome5Solid"
+                                            Glyph="{x:Static fontAwesome:FontAwesomeIcons.ArrowAltCircleRight}"
+                                            Color="{Binding DefaultStyle.ButtonFgColor, Converter={StaticResource stringToColorConverter}}" />
+                                    </Image.Source>
+                                </Image>
+                            </sfButtons:SfButton>
+                        </Grid>
+                    </syncEffectsView:SfEffectsView>
+                </Grid>
+            </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
